objects/Address.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Code__c</fullName>
        <formula>Account__r.Name &amp; &apos;:- &apos;&amp;  Account__r.FSL_ERP_Customer_Code__c</formula>
        <label>Account Name-Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Repair Site Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL_Site_ID__c</fullName>
        <externalId>true</externalId>
        <label>Site ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Site_Name__c</fullName>
        <label>Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Tax_District__c</fullName>
        <label>Tax District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>----- Canada</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>BCEX</fullName>
                </value>
                <value>
                    <fullName>BCXLBR</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>CANEX</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>CTE</fullName>
                </value>
                <value>
                    <fullName>EXE</fullName>
                </value>
                <value>
                    <fullName>EXEMPT</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>GSTEX</fullName>
                </value>
                <value>
                    <fullName>GSTEXEMPT</fullName>
                </value>
                <value>
                    <fullName>HSTBC</fullName>
                </value>
                <value>
                    <fullName>HSTBCEX</fullName>
                </value>
                <value>
                    <fullName>HSTON</fullName>
                </value>
                <value>
                    <fullName>HSTONEX</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>LLOYD</fullName>
                </value>
                <value>
                    <fullName>MAN</fullName>
                </value>
                <value>
                    <fullName>MANEX</fullName>
                </value>
                <value>
                    <fullName>MAN-GOV&apos;T</fullName>
                </value>
                <value>
                    <fullName>MAN-GOVT</fullName>
                </value>
                <value>
                    <fullName>MTV</fullName>
                </value>
                <value>
                    <fullName>NAS</fullName>
                </value>
                <value>
                    <fullName>NB</fullName>
                </value>
                <value>
                    <fullName>NBEX</fullName>
                </value>
                <value>
                    <fullName>NF</fullName>
                </value>
                <value>
                    <fullName>NFEX</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IAM_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IAM Site</label>
        <referenceTo>IAM_CDH_Cross_references__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName &amp; &apos; &apos; &amp; LastModifiedBy.LastName</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site_Description__c</fullName>
        <label>Site Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Address_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISBLANK(Country),
ISBLANK(Street),
ISBLANK(City),
AND(NOT(OR((Country = &apos;Caribbean&apos;),
(Country = &apos;Singapore&apos;),
(Country = &apos;Korea, Republic of&apos;))),
ISBLANK(State)),
ISBLANK(PostalCode)
),
NOT(
OR(
$Profile.Name = &apos;CSS Integration&apos;,
$Profile.Name = &apos;System Administrator&apos;,
$Profile.Name = &apos;CSS_Support&apos;
)
)
)</errorConditionFormula>
        <errorMessage>Please make sure you have entered Street, City, State, Country, and Zip/Postal Code in Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Address_New_Line_Validate</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( Street , &apos;(.*\r?\n.*)*&apos;)</errorConditionFormula>
        <errorDisplayField>Street</errorDisplayField>
        <errorMessage>Address lines must be continuous and separated by a comma.
Address field must be in the following format: Address Line 1, Line 2, Line 3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_BillingPostalCode_validate_Can</fullName>
        <active>true</active>
        <description>As part of story FBI-44, to add validation for postal codes.</description>
        <errorConditionFormula>AND(
        OR(Country = &quot;CAN&quot;, Country = &quot;CA&quot;, Country = &quot;Canada&quot;),
        NOT(REGEX(PostalCode, &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)),
		NOT(ISBLANK(  Street  )), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;CSS Integration&apos;, 
$Profile.Name &lt;&gt; &apos;CSS_Support&apos;,
OR(ISNEW(), ISCHANGED(PostalCode) )
)</errorConditionFormula>
        <errorDisplayField>PostalCode</errorDisplayField>
        <errorMessage>Canadian postal code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_BillingPostalCode_validate_US</fullName>
        <active>true</active>
        <description>As part of story FBI-44, to add validation for postal codes.</description>
        <errorConditionFormula>AND(
OR(Country = &quot;USA&quot;, Country = &quot;US&quot;,Country = &quot;United States&quot;),
NOT(REGEX(PostalCode, &quot;\\d{5}(-\\d{4})?&quot;)), 
NOT(ISBLANK(  Street  )), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Name &lt;&gt; &apos;CSS Integration&apos;, 
$Profile.Name &lt;&gt; &apos;CSS_Support&apos;,
OR(ISNEW(), ISCHANGED(PostalCode) )
)</errorConditionFormula>
        <errorDisplayField>PostalCode</errorDisplayField>
        <errorMessage>Zipcode must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Tax_District_Canada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  Country  == &apos;Canada&apos;,
  NOT(ISBLANK(TEXT(FSL_Tax_District__c))),
  OR(
    ISPICKVAL(FSL_Tax_District__c, &quot;----- Canada&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;----- Caribbean&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;CATANO&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;CATANOL&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;CATANOX&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;EXP&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;GOV&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;INTERNAL&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PR&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX1&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX2&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX3&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX4&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PRCC&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;PRX&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;TEST&quot;),
    ISPICKVAL(FSL_Tax_District__c, &quot;xx&quot;)
  ),
  NOT(
    OR(
      $Profile.Name = &apos;CSS Integration&apos;
    )
  )
)</errorConditionFormula>
        <errorDisplayField>FSL_Tax_District__c</errorDisplayField>
        <errorMessage>Please choose a Tax District under ----- Canada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Tax_District_Caribbean</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  Country  == &apos;Caribbean&apos;,
  NOT(ISBLANK(TEXT(FSL_Tax_District__c))),
  NOT(
    OR(
      ISPICKVAL(FSL_Tax_District__c, &quot;CATANO&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;CATANOL&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;CATANOX&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;EXP&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;GOV&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;INTERNAL&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PR&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX1&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX2&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX3&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PR_EX4&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PRCC&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;PRX&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;TEST&quot;),
      ISPICKVAL(FSL_Tax_District__c, &quot;xx&quot;)
    )
  ),
  NOT(
    OR(
      $Profile.Name = &apos;CSS Integration&apos;
    )
  )
)</errorConditionFormula>
        <errorDisplayField>FSL_Tax_District__c</errorDisplayField>
        <errorMessage>Please choose a Tax District under ----- Caribbean.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_District_Mandatory</fullName>
        <active>true</active>
        <description>Tax District Mandatory for Countries ‘Canada&apos; and &apos;Caribbean’.</description>
        <errorConditionFormula>AND(OR(Country == &apos;Canada&apos;, Country == &apos;Caribbean&apos;), ISBLANK(TEXT(FSL_Tax_District__c)),
NOT(
OR(
$Profile.Name = &apos;CSS Integration&apos;,
$Profile.Name = &apos;System Administrator&apos;,
$Profile.Name = &apos;CSS_Support&apos;
)
)
)</errorConditionFormula>
        <errorDisplayField>FSL_Tax_District__c</errorDisplayField>
        <errorMessage>Please make sure to choose a Tax District.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_District_Not_Required</fullName>
        <active>true</active>
        <description>Tax District Not Required for Countries other than ‘Canada&apos; and &apos;Caribbean’.</description>
        <errorConditionFormula>AND(NOT(OR(Country == &apos;Canada&apos;, Country == &apos;Caribbean&apos;)), NOT(ISBLANK(TEXT(FSL_Tax_District__c))))</errorConditionFormula>
        <errorDisplayField>FSL_Tax_District__c</errorDisplayField>
        <errorMessage>Please choose Tax District as &apos;--None--&apos; to Save.</errorMessage>
    </validationRules>
</CustomObject>